fix padding on small buttons

--- a/app/assets/stylesheets/modules/buttons.scss
+++ b/app/assets/stylesheets/modules/buttons.scss
@@ -32,7 +32,7 @@
 
 .btn-sm {
   font-size: $h5;
-  padding: .1rem .5rem;
+  padding: ($space-1 / 2) ($space-1 * 1.5);
 }
 
 .btn-paper {
